# Generated by Django 4.2.7 on 2026-01-19 19:28

from django.conf import settings
from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    dependencies = [
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
        ('editor', '0001_initial'),
    ]

    operations = [
        migrations.AddField(
            model_name='course',
            name='tutor',
            field=models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='tutored_courses', to=settings.AUTH_USER_MODEL, verbose_name='Tutor'),
        ),
        migrations.AddField(
            model_name='institution',
            name='logo',
            field=models.URLField(blank=True, verbose_name='Logo URL'),
        ),
        migrations.AddField(
            model_name='institution',
            name='slug',
            field=models.SlugField(blank=True, max_length=100, unique=True, verbose_name='Slug URL'),
        ),
        migrations.AddField(
            model_name='institution',
            name='status',
            field=models.CharField(choices=[('active', 'Activa'), ('inactive', 'Inactiva'), ('suspended', 'Suspendida')], default='active', max_length=20, verbose_name='Estado'),
        ),
        migrations.CreateModel(
            name='Membership',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('role', models.CharField(choices=[('admin', 'Administrador Global'), ('institution', 'Administrador de Institución'), ('tutor', 'Tutor'), ('student', 'Estudiante')], default='student', max_length=20, verbose_name='Rol')),
                ('is_active', models.BooleanField(default=True, verbose_name='Activo')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('notes', models.TextField(blank=True, verbose_name='Notas')),
                ('institution', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='memberships', to='editor.institution', verbose_name='Institución')),
                ('user', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='memberships', to=settings.AUTH_USER_MODEL, verbose_name='Usuario')),
            ],
            options={
                'verbose_name': 'Membresía',
                'verbose_name_plural': 'Membresías',
                'ordering': ['institution', 'role', 'user__username'],
                'unique_together': {('user', 'institution')},
            },
        ),
    ]
